package edu.fiuba.algo3.modelo;

public class Jugador {
    public Jugador(Imperio imperio, Tablero tablero) {

    }
}
